Solving problems with reading data back from SDRAM

--- a/spiNNakerGraphFrontEnd.cfg
+++ b/spiNNakerGraphFrontEnd.cfg
@@ -28,4 +28,8 @@ time_between_requests = 50
 minimum_buffer_sdram = 1048576
 
 [Database]
-create_routing_info_to_atom_id_mapping = True
+create_routing_info_to_atom_id_mapping = False
+
+[Reports]
+writeRouterReports = False
+extract_iobuf = True
